--- a/src/App.css
+++ b/src/App.css
@@ -1,65 +1,86 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-.container {
+.view {
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
+  background-color: #111827;
+  color: white;
 }
 
-.toolbar {
+.nav-bar {
+  width: 100%;
+  overflow: hidden;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  margin: 0.5em;
+  padding: 10px 0;
+  /* border-bottom: 1px solid green; */
+  flex-shrink: 0;
+  /* Prevents the nav bar from shrinking */
+  list-style: none;
+}
+
+.nav-btn {
+  text-decoration: none;
+  list-style: none;
+  cursor: pointer;
+  width: 10rem;
+  padding: 10px;
+  text-align: center;
+  border-bottom: 1px solid green;
+  transition: background-color 0.25s;
+}
+
+.nav-btn:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.app-view {
+  flex-grow: 1;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* Centers content vertically */
+  align-items: center;
+  /* Centers content horizontally */
+  margin: 0 auto;
+}
+
+.container {
+  display: flex;
+  width: 90%;
+  max-width: 1000px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.toolbar {
+  display: flex;
+  width: 50%;
+  min-width: 300px;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 0.5em 0;
 }
 
 .btn {
-  padding: 0.25em;
-  width: 100px;
+  padding: 0.5em 1em;
+  width: 120px;
+  border: none;
+  cursor: pointer;
+  color: white;
+  border-radius: 4px;
+  font-weight: bold;
 }
 
 .btn.generate {
@@ -68,4 +89,8 @@
 
 .btn.clear {
   background-color: rebeccapurple;
+}
+
+.btn:hover {
+  background-color: rgba(255, 255, 255, 0.1);
 }
